[gd_scene load_steps=66 format=2]

[ext_resource path="res://assets/Standing/down.png" type="Texture" id=1]
[ext_resource path="res://assets/Standing/left.png" type="Texture" id=2]
[ext_resource path="res://assets/Standing/up.png" type="Texture" id=3]
[ext_resource path="res://assets/Standing/right.png" type="Texture" id=4]
[ext_resource path="res://objects/Islander/Islander.gd" type="Script" id=5]
[ext_resource path="res://assets/Standing/down left.png" type="Texture" id=6]
[ext_resource path="res://assets/Standing/up right.png" type="Texture" id=7]
[ext_resource path="res://assets/Standing/down right.png" type="Texture" id=8]
[ext_resource path="res://assets/Standing/up left.png" type="Texture" id=9]
[ext_resource path="res://assets/Running/down.png" type="Texture" id=10]
[ext_resource path="res://assets/Running/down right.png" type="Texture" id=11]
[ext_resource path="res://assets/Running/down left.png" type="Texture" id=12]
[ext_resource path="res://assets/Running/left.png" type="Texture" id=13]
[ext_resource path="res://assets/Running/up.png" type="Texture" id=14]
[ext_resource path="res://assets/Running/up right.png" type="Texture" id=15]
[ext_resource path="res://assets/Running/up left.png" type="Texture" id=16]
[ext_resource path="res://assets/Running/right.png" type="Texture" id=17]
[ext_resource path="res://assets/Shadow.png" type="Texture" id=18]
[ext_resource path="res://assets/Melee.png" type="Texture" id=19]
[ext_resource path="res://objects/Islander/AttackArea.gd" type="Script" id=20]
[ext_resource path="res://assets/Exclamation.png" type="Texture" id=21]

[sub_resource type="CircleShape2D" id=1]
radius = 4.54328

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 16 )
region = Rect2( 0, 0, 22, 40 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 16 )
region = Rect2( 22, 0, 22, 40 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 16 )
region = Rect2( 44, 0, 22, 40 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 16 )
region = Rect2( 66, 0, 22, 40 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 12 )
region = Rect2( 0, 0, 22, 40 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 12 )
region = Rect2( 22, 0, 22, 40 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 12 )
region = Rect2( 44, 0, 22, 40 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 12 )
region = Rect2( 66, 0, 22, 40 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 15 )
region = Rect2( 0, 0, 22, 40 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 15 )
region = Rect2( 22, 0, 22, 40 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 15 )
region = Rect2( 44, 0, 22, 40 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 15 )
region = Rect2( 66, 0, 22, 40 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 17 )
region = Rect2( 0, 0, 22, 40 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 17 )
region = Rect2( 22, 0, 22, 40 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 17 )
region = Rect2( 44, 0, 22, 40 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 17 )
region = Rect2( 66, 0, 22, 40 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 14 )
region = Rect2( 0, 0, 22, 40 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 14 )
region = Rect2( 22, 0, 22, 40 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 14 )
region = Rect2( 44, 0, 22, 40 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 14 )
region = Rect2( 66, 0, 22, 40 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 22, 40 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 11 )
region = Rect2( 22, 0, 22, 40 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 11 )
region = Rect2( 44, 0, 22, 40 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 11 )
region = Rect2( 66, 0, 22, 40 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 13 )
region = Rect2( 0, 0, 22, 40 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 13 )
region = Rect2( 22, 0, 22, 40 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 13 )
region = Rect2( 44, 0, 22, 40 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 13 )
region = Rect2( 66, 0, 22, 40 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 22, 40 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 10 )
region = Rect2( 22, 0, 22, 40 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 10 )
region = Rect2( 44, 0, 22, 40 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 10 )
region = Rect2( 66, 0, 22, 40 )

[sub_resource type="SpriteFrames" id=34]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "Run_UpLeft",
"speed": 10.0
}, {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "Run_DownLeft",
"speed": 10.0
}, {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ) ],
"loop": true,
"name": "Run_UpRight",
"speed": 10.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "Stand_Left",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "Stand_DownRight",
"speed": 5.0
}, {
"frames": [ SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ) ],
"loop": true,
"name": "Run_Right",
"speed": 10.0
}, {
"frames": [ SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ) ],
"loop": true,
"name": "Run_Up",
"speed": 10.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "Stand_Down",
"speed": 5.0
}, {
"frames": [ SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ) ],
"loop": true,
"name": "Run_DownRight",
"speed": 10.0
}, {
"frames": [ SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ) ],
"loop": true,
"name": "Run_Left",
"speed": 10.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "Stand_DownLeft",
"speed": 5.0
}, {
"frames": [ SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ) ],
"loop": true,
"name": "Run_Down",
"speed": 10.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "Stand_Right",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "Stand_UpRight",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "Stand_UpLeft",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "Stand_Up",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=35]
flags = 4
atlas = ExtResource( 19 )
region = Rect2( 0, 0, 20, 12 )

[sub_resource type="AtlasTexture" id=36]
flags = 4
atlas = ExtResource( 19 )
region = Rect2( 20, 0, 20, 12 )

[sub_resource type="AtlasTexture" id=37]
flags = 4
atlas = ExtResource( 19 )
region = Rect2( 40, 0, 20, 12 )

[sub_resource type="AtlasTexture" id=38]
flags = 4
atlas = ExtResource( 19 )
region = Rect2( 60, 0, 20, 12 )

[sub_resource type="AtlasTexture" id=39]
flags = 4
atlas = ExtResource( 19 )
region = Rect2( 80, 0, 20, 12 )

[sub_resource type="AtlasTexture" id=40]
flags = 4
atlas = ExtResource( 19 )
region = Rect2( 100, 0, 20, 12 )

[sub_resource type="AtlasTexture" id=41]
flags = 4
atlas = ExtResource( 19 )
region = Rect2( 120, 0, 20, 12 )

[sub_resource type="SpriteFrames" id=42]
animations = [ {
"frames": [ SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ) ],
"loop": false,
"name": "default",
"speed": 40.0
} ]

[sub_resource type="CapsuleShape2D" id=43]
radius = 6.89023
height = 10.7323

[sub_resource type="CapsuleShape2D" id=44]
radius = 4.29457
height = 3.88918

[node name="Islander" type="KinematicBody2D" groups=[
"Islander",
]]
collision_mask = 11
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="StaticShadow" type="Sprite" parent="."]
position = Vector2( 0.5, 2 )
texture = ExtResource( 18 )

[node name="CharacterAnimations" type="AnimatedSprite" parent="."]
position = Vector2( 0, -10 )
frames = SubResource( 34 )
animation = "Stand_Down"
playing = true

[node name="AttackPivotPoint" type="Node2D" parent="."]

[node name="AttackAnimation" type="AnimatedSprite" parent="AttackPivotPoint"]
visible = false
modulate = Color( 0.243137, 0, 0.298039, 1 )
position = Vector2( 0.381821, 10.9704 )
z_index = 1
frames = SubResource( 42 )
frame = 5

[node name="AttackArea" type="Area2D" parent="AttackPivotPoint/AttackAnimation" groups=[
"Attack",
"Islander",
]]
position = Vector2( -0.735779, 0.946007 )
script = ExtResource( 20 )

[node name="Shape" type="CollisionShape2D" parent="AttackPivotPoint/AttackAnimation/AttackArea"]
position = Vector2( 0.943878, -2.59565 )
rotation = 1.5708
shape = SubResource( 43 )
disabled = true

[node name="Hurtbox" type="Area2D" parent="."]

[node name="Shape" type="CollisionShape2D" parent="Hurtbox"]
rotation = 1.5708
shape = SubResource( 44 )

[node name="HurtCooldown" type="Timer" parent="."]
wait_time = 0.2

[node name="EmoteTimer" type="Timer" parent="."]
wait_time = 0.7
one_shot = true

[node name="TargetFoundEmote" type="Sprite" parent="."]
visible = false
position = Vector2( 0.5, -34 )
texture = ExtResource( 21 )
[connection signal="animation_finished" from="AttackPivotPoint/AttackAnimation" to="." method="_on_AttackAnimation_animation_finished"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="timeout" from="HurtCooldown" to="." method="_on_HurtTimer_timeout"]
[connection signal="timeout" from="EmoteTimer" to="." method="_on_EmoteTimer_timeout"]
